--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -2,5 +2,7 @@ name: Post welcome comment
 on:
   pull_request:
     types: [opened]
-permissions:
-  pull-requests: write
+jobs:
+  build:
+    name: Post welcome comment
+    runs-on: ubuntu-latest
